# reportGenerator

./: .gitignore  README.md  doc.md  pyproject.toml  symbology-style.db
src/reportgenerator/: cli.py  db_auth.py  queries.py  report.py
src/reportgenerator/analyses/cartography/: analysis.py  export.py
src/reportgenerator/analyses/etat_connaissance/: analysis.py  dataviz.py
src/reportgenerator/analysis/atlas/: analysis.py  export.py  qgis_atlas_render.py  qgis_launcher.py
src/reportgenerator/analysis/cartography/: analysis.py  export.py  qgis_launcher.py  qgis_render.py
src/reportgenerator/analysis/common/: filesystem.py  models.py  theme.py
src/reportgenerator/analysis/common/tables/: excel_export.py  generic_table.py  species_table.py  styles.py  utils.py
src/reportgenerator/analysis/knowledge_status/: analysis.py  dataviz.py
src/reportgenerator/templates/: atlas_modele.qgs  atlas_modele.qgs~  projet_modele.qgs  projet_modele.qgs~
src/reportgenerator/templates/_olddatatest/: atlas.gpkg
